# repometa

./: .env.example  .gitignore  README.md  pyproject.toml
src/repometa/: auth.py  cli.py  config.py  constants.py  errors.py  github.py  models.py  presets.py  service.py  topics.py
tests/: test_models.py  test_service.py  test_topics.py
