[project]
name = "repometa"
version = "0.1.0"
description = "One command to set GitHub repo topics, description and homepage with stack presets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "tantaneity" }]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.urls]
Repository = "https://github.com/tantaneity/repometa"

[project.scripts]
repometa = "repometa.cli:app"

[dependency-groups]
dev = ["pytest>=8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repometa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_functions = ["should_*"]
